src/rust/type_system/snapshots/syn_state_machine__rust__type_system__trait_and_lifetime_bounds__tests__concat_idents! (parse it_matches_lifetime).snap
---
source: src/rust/type_system/trait_and_lifetime_bounds.rs
expression: "crate::parse::<Lifetime>(q.clone())"
---
Ok(
    LifetimeToken {
        ident: Ident(
            a,
        ),
    },
)
