src/rust/type_system/snapshots/syn_state_machine__rust__type_system__trait_and_lifetime_bounds__tests__concat_idents! (parse it_matches_path_type_param_bound).snap
---
source: src/rust/type_system/trait_and_lifetime_bounds.rs
expression: "crate::parse::<TypeParamBound<Infallible, SimplePath>>(q.clone())"
---
Ok(
    Tr(
        TraitBound {
            q: false,
            for_lts: None,
            path: HigherOrderPath {
                leading: false,
                segments: Interlace {
                    values: [
                        Bare(
                            Id(
                                Ident(
                                    std,
                                ),
                            ),
                        ),
                        Bare(
                            Id(
                                Ident(
                                    fmt,
                                ),
                            ),
                        ),
                        Bare(
                            Id(
                                Ident(
                                    Debug,
                                ),
                            ),
                        ),
                    ],
                },
            },
        },
    ),
)
