src/rust/type_system/snapshots/syn_state_machine__rust__type_system__trait_and_lifetime_bounds__tests__it_matches_bound_path.snap
---
source: src/rust/type_system/trait_and_lifetime_bounds.rs
expression: "insta_match_test!(+ parse TraitBound<Infallible, SimplePath> : std :: fmt ::\n    Debug)"
---
Ok(
    TraitBound {
        q: false,
        for_lts: None,
        path: HigherOrderPath {
            leading: false,
            segments: Interlace {
                values: [
                    Bare(
                        Id(
                            Ident(
                                std,
                            ),
                        ),
                    ),
                    Bare(
                        Id(
                            Ident(
                                fmt,
                            ),
                        ),
                    ),
                    Bare(
                        Id(
                            Ident(
                                Debug,
                            ),
                        ),
                    ),
                ],
            },
        },
    },
)
