src/rust/type_system/snapshots/syn_state_machine__rust__type_system__trait_and_lifetime_bounds__tests__it_matches_for_lifetimes.snap
---
source: src/rust/type_system/trait_and_lifetime_bounds.rs
expression: "insta_match_test!(+ parse ForLifetimes<Infallible, Infallible> : for < 'a, 'b\n    >)"
---
Ok(
    ForLifetimes {
        args: GenericParams {
            params: Interlace {
                values: [
                    Lt(
                        Rep(
                            [],
                        ),
                        LifetimeParam {
                            lt: LifetimeOrLabel {
                                ident: Ident(
                                    a,
                                ),
                            },
                            bound: None,
                        },
                    ),
                    Lt(
                        Rep(
                            [],
                        ),
                        LifetimeParam {
                            lt: LifetimeOrLabel {
                                ident: Ident(
                                    b,
                                ),
                            },
                            bound: None,
                        },
                    ),
                ],
            },
        },
    },
)
