src/rust/type_system/snapshots/syn_state_machine__rust__type_system__trait_and_lifetime_bounds__tests__it_matches_for_paths.snap
---
source: src/rust/type_system/trait_and_lifetime_bounds.rs
expression: "insta_match_test!(+ parse TraitBound<Infallible, SimplePath> : for < 'a > std\n    :: fmt :: Debug)"
---
Ok(
    TraitBound {
        q: false,
        for_lts: Some(
            ForLifetimes {
                args: GenericParams {
                    params: Interlace {
                        values: [
                            Lt(
                                [],
                                LifetimeParam {
                                    lt: LifetimeOrLabel(
                                        Identifier(
                                            Ident(
                                                a,
                                            ),
                                        ),
                                    ),
                                    bound: None,
                                },
                            ),
                        ],
                    },
                },
            },
        ),
        path: HigherOrderPath {
            leading: false,
            segments: MinLength(
                Interlace {
                    values: [
                        Bare(
                            Id(
                                Identifier(
                                    Ident(
                                        std,
                                    ),
                                ),
                            ),
                        ),
                        Bare(
                            Id(
                                Identifier(
                                    Ident(
                                        fmt,
                                    ),
                                ),
                            ),
                        ),
                        Bare(
                            Id(
                                Identifier(
                                    Ident(
                                        Debug,
                                    ),
                                ),
                            ),
                        ),
                    ],
                },
            ),
        },
    },
)
